--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 <header>
-  <h1>A Website</h1> <img src="http://lorempixel.com/400/200/">
+  <h1> Cats Facts</h1> <img src="https://images.unsplash.com/photo-1518791841217-8f162f1e1131?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80">
   <nav> <a href="index.html">Home</a> <a href="about.html">About</a> <a href="contact.html">Contact</a> </nav>
 </header>
 <section>
   <article>
-    <h2>Stuff</h2> <img src="http://lorempixel.com/50/50/">
+    <h2>Cat of the month</h2> <img src="https://ichef.bbci.co.uk/images/ic/720x405/p0517py6.jpg">
     <p>Lorem ipsum dolor sit, <a href="">Google</a> amet consectetur adipisicing elit. Rem explicabo optio.</p>
   </article>
   <article>
@@ -30,19 +30,19 @@
 </section>
 <section>
   <h2>Another Thing</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisiciic dolorem quasi deserunt est error enim. Sis.</p>
+  <p>The Maine Coon is the largest domesticated cat breed. It has a distinctive physical appearance and valuable hunting skills. It is one of the oldest natural breeds in North America, specifically native to the state of Maine, where it is the official state cat.</p>
   <div>
     <h3>Smaller Thing</h3>
-    <p>Lint eligendi necessitatibus distinctio quibusdam deleniti perferendis eius minima qui?</p>
-    <p>Aadipisicing elit. Explicabo sapiente quos repellat quo quidem porro non dolorem fuga accusantium exercitationem, </p>
+    <p>No records of the Maine Coon's exact origins and date of introduction to the United States exist, so several competing hypotheses have been suggested. The breed was popular in cat shows in the late 19th century, but its existence became threatened when long-haired breeds from overseas were introduced in the early 20th century. The Maine Coon has since made a comeback and is now one of the more popular cat breeds in the USA.</p>
+    <p>The Maine Coon is a large and sociable cat, hence its nickname, "the gentle giant." It is characterized by a prominent ruff along its chest, robust bone structure, rectangular body shape, an uneven two layered coat with longer guard hairs with a silky satin under layer undercoat, and a long, bushy tail. The breed's colors vary widely, with only lilac and chocolate disallowed for pedigree. Reputed for its intelligence and playful, gentle personality, the Maine Coon is often cited as having "dog-like" characteristics. Professionals notice certain health problems in the breed including feline hypertrophic cardiomyopathy and hip dysplasia, but reputable breeders use modern screening methods to minimize the frequency of these problems.</p>
   </div>
-  <h2>Even More Stuff</h2>
-  <p>Lorem ipsum dolor sit, ameboriosam, similique vel. Alias, rem?</p>
+  <h2>Spotlight on Feline Diseases</h2>
+  <p>Diseases which affect cats include acute infections, parasitic infestations, injuries; and chronic diseases such as kidney disease, thyroid disease, and arthritis. Vaccinations are available for many infectious diseases, as are treatments to eliminate parasites such as worms and fleas.</p>
   <h3>More Stuff, Less Important</h3>
-  <p>Inventore sapiente eveniet vero nihil quaerat unde tempora namarchitecto</p>
+  <p>About 250 heritable genetic disorders have been identified in cats, many similar to human inborn errors. The high level of similarity among the metabolism of mammals allows many of these feline diseases to be diagnosed using genetic tests that were originally developed for use in humans, as well as the use of cats as animal models in the study of the human diseases.</p>
 </section>
 <footer>
-  <h4>Footer Stuff</h4>
+  <h4>Contact us at 559-876-5309 or through email at info@fresnocatfacts.com</h4>
   <div>
     <ul>
       <li><a href="#thinga">Thing A</a></li>
