--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
 </head>
 <body>
 <header>
-  <h1> Cats Facts</h1> <img src="https://images.unsplash.com/photo-1518791841217-8f162f1e1131?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80">
+  <h1> Things</h1> <img src="https://images.unsplash.com/photo-1518791841217-8f162f1e1131?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80">
   <nav> <a href="index.html">Home</a> <a href="about.html">About</a> <a href="contact.html">Contact</a> </nav>
 </header>
 <section>
   <article>
-    <h2>Cat of the month</h2> <img src="https://ichef.bbci.co.uk/images/ic/720x405/p0517py6.jpg">
-    <p>Lorem ipsum dolor sit, <a href="">Google</a> amet consectetur adipisicing elit. Rem explicabo optio.</p>
+    <h2>Cats facts</h2> <img src="https://ichef.bbci.co.uk/images/ic/720x405/p0517py6.jpg">
+    <p>The cat (Felis catus) is a small carnivorous mammal. It is the only domesticated species in the family Felidae and often referred to as the domestic cat to distinguish it from wild members of the family. The cat is either a house cat, kept as a pet, or a feral cat, freely ranging and avoiding human contact. A house cat is valued by humans for companionship and for its ability to hunt rodents. About 60 cat breeds are recognized by various cat registries.</p>
   </article>
   <article>
-    <h2>Stuff, Additionally</h2> <img src="http://lorempixel.com/150/50/">
+    <h2>Cat of the Month</h2> <img src="https://images-production.freetls.fastly.net/uploads/posts/off_site_promo_image/166842/why-do-cats-meow.jpg?auto=compress&crop=top&fit=crop&q=55&w=1200&h=900">
     <p>Ipsum dolor sit, amet consectetur adipisicing elit. <a href="">Google</a> rem explicabo</p>
     <p>Sit, amet consectetur adipisicing elit.</p>
   </article>
   <article>
-    <h2>Also Stuff</h2> <img src="http://lorempixel.com/150/50/">
-    <p>Ipsum dolor sit, Rem explicabo</p>
-    <p>Adipisicing elit. Sit, amet consectetur. Dangit.</p>
+    <h2>Cat of the month</h2> <img src="https://cdn3-www.cattime.com/assets/uploads/gallery/maine-coon-cats-and-kittens/maine-coon-cats-and-kittens-5.jpg">
+    <p>Monkey, cat about town</p>
+    <p>Monkey was born in Fresno CA and is 7 years old. He enjoys chasing the red dot and eating and mostly being indifferent to the world that revolves around him.</p>
   </article>
 </section>
 <section>
-  <h2>Another Thing</h2>
+  <h2>Abot Main Coons</h2>
   <p>The Maine Coon is the largest domesticated cat breed. It has a distinctive physical appearance and valuable hunting skills. It is one of the oldest natural breeds in North America, specifically native to the state of Maine, where it is the official state cat.</p>
   <div>
     <h3>Smaller Thing</h3>
