--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <p>Sit, amet consectetur adipisicing elit.</p>
   </article>
   <article>
-    <h2>Cat of the month</h2> <img src="https://cdn3-www.cattime.com/assets/uploads/gallery/maine-coon-cats-and-kittens/maine-coon-cats-and-kittens-5.jpg">
-    <p>Monkey, cat about town</p>
+    <h2>Monkey, cat about town</h2> <img src="https://cdn3-www.cattime.com/assets/uploads/gallery/maine-coon-cats-and-kittens/maine-coon-cats-and-kittens-5.jpg">
+    <p></p>
     <p>Monkey was born in Fresno CA and is 7 years old. He enjoys chasing the red dot and eating and mostly being indifferent to the world that revolves around him.</p>
   </article>
 </section>
