--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
   <p>Inventore sapiente eveniet vero nihil quaerat unde tempora namarchitecto</p>
 </section>
 <footer>
-  <h4>Footer Stuff</h4>
+  <h4>Contact us at 559-876-5309 or through email at info@fresnocatfacts.com</h4>
   <div>
     <ul>
       <li><a href="#thinga">Thing A</a></li>
