--- a/contact.html
+++ b/contact.html
@@ -14,13 +14,13 @@
 </header>
   <section>
   <article>
-    <h2>Stuff</h2> <img src="http://lorempixel.com/50/50/">
+    <h2>Cat Facts- Contact</h2> <img src="http://lorempixel.com/150/50/cats">
     <p>Lorem ipsum dolor sit, <a href="">Google</a> amet consectetur adipisicing elit. Rem explicabo optio.</p>
   </article>
   <article>
-    <h2>Stuff, Additionally</h2> <img src="http://lorempixel.com/150/50/">
+    <h2>Stuff, Additionally</h2> <img src="http://lorempixel.com/150/50/cats">
     <p>Ipsum dolor sit, amet consectetur adipisicing elit. <a href="">Google</a> rem explicabo</p>
-    <p>Sit, amet consectetur adipisicing elit.</p>
+    <p>Contact us at 559-876-5309 or through email at info@fresnocatfacts.com</p>
   </article>
   <article>
     <h2>Also Stuff</h2> <img src="http://lorempixel.com/150/50/">
@@ -42,7 +42,7 @@
   <p>Inventore sapiente eveniet vero nihil quaerat unde tempora namarchitecto</p>
 </section>
 <footer>
-  <h4>Footer Stuff</h4>
+  <h4>Contact us at 559-876-5309 or through email at info@fresnocatfacts.com</h4>
   <div>
     <ul>
       <li><a href="#thinga">Thing A</a></li>
